--- a/styles/style.css
+++ b/styles/style.css
@@ -105,7 +105,7 @@ strong {
 	font-style: normal;
 }
 body {
-	background: #f5f0e0 url(../images/noise.png);
+	background: #f5f0e0 url(../images/noise (2).png);
 	font-family: Century Gothic, sans-serif;
 	color: #252525;
 	font-size: 14px;
